--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "p5": "^2.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "recharts": "^2.12.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
